move to JDK25; upgrade libraries and plugins; 2.9.0-SNAPSHOT